GNOME Bugzilla – Bug 726562
lua-factory: Print URL for failed fetches
Last modified: 2014-03-17 23:01:26 UTC
.
Created attachment 272177 [details] [review] lua-factory: Print URL for failed fetches When a network fetch fails, show the URL of the fail call, so that the lua script can be fixed/debugged.
Attachment 272177 [details] pushed as 19a8daf - lua-factory: Print URL for failed fetches