lua-factory: Print URL for failed fetches

When a network fetch fails, show the URL of the fail call, so
that the lua script can be fixed/debugged.

https://bugzilla.gnome.org/show_bug.cgi?id=726562